# quitz-rust-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
