[package]
name = "quitz-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio = {version = "1.19.2", features = ["full"]}
actix-web = "4"
serde_json = "1.0"
rand = "0.8.5"
#actix-ratelimit = "0.3.1"
#openssl = { version = "0.10", features = ["vendored"] }
actix-governor = "0.3.0"
dotenv = "0.15.0"

[dependencies.mongodb]
version = "2.2.2"
default-features = false
features = ["sync"]
