[package]
name = "quitz-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde_json = "1.0"
actix-governor = "0.3.0"
dotenv = "0.15.0"
rand = "0.8.5"

[dependencies.mongodb]
version = "2.2.2"
default-features = false
features = ["tokio-runtime"]
